syntax = "proto3";

package kedge.config.grpc.routes;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "kedge/config/grpc/routes/matcher.proto";

/// Route is a mapping between invoked gRPC requests and backends that should serve it.
message Route {
    /// backend_name is the string identifying the backend to send data to.
    string backend_name = 1 [(validator.field) = {regex: "^[a-z_0-9.]{2,64}$"}];

    Matcher matcher = 2;

    bool autogenerated = 3;
}
